--- a/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,31 @@
 <mat-card>
-  <mat-form-field>
-    <input matInput type="text" [(ngModel)]="enteredTitle">
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="primary" (click)="onAppPost()">
-    Save Post
-  </button>
+  <form (submit)="onAppPost(postForm)" #postForm="ngForm">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        name="title"
+        ngModel
+        required
+        #title="ngModel"
+      />
+      @if (title.invalid) {
+      <mat-error>Please enter a post title</mat-error>
+      }
+    </mat-form-field>
+    <mat-form-field>
+      <textarea
+        matInput
+        rows="6"
+        name="content"
+        ngModel
+        required
+        #content="ngModel"
+      ></textarea>
+      @if (title.invalid) {
+      <mat-error>Please enter a post content</mat-error>
+      }
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit">Save Post</button>
+  </form>
 </mat-card>
