--- a/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
@@ -6,6 +6,8 @@
       {{ post.title }}
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
+    <button mat-button color="primary">Edit</button>
+    <button mat-button color="warn">Delete</button>
   </mat-expansion-panel>
   }
 </mat-accordion>
