--- a/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
@@ -7,7 +7,7 @@
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
     <button mat-button color="primary">Edit</button>
-    <button mat-button color="warn">Delete</button>
+    <button mat-button color="warn" (click)="onDelete(post.id)">Delete</button>
   </mat-expansion-panel>
   }
 </mat-accordion>
