--- a/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form (submit)="onAppPost(postForm)" #postForm="ngForm">
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
       <input
         matInput
