--- a/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
@@ -1,34 +1,41 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
-    <mat-form-field>
-      <input
-        matInput
-        type="text"
-        name="title"
-        [ngModel]="post?.title"
-        required
-        minlength="3"
-        placeholder="Post Title"
-        #title="ngModel"
-      />
-      @if (title.invalid) {
-      <mat-error>Please enter a post title</mat-error>
-      }
-    </mat-form-field>
-    <mat-form-field>
-      <textarea
-        matInput
-        rows="6"
-        name="content"
-        [ngModel]="post?.content"
-        required
-        placeholder="Post Content"
-        #content="ngModel"
-      ></textarea>
-      @if (title.invalid) {
-      <mat-error>Please enter a post content</mat-error>
-      }
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Save Post</button>
-  </form>
+  @if(isLoading == true) {
+    <mat-spinner>
+    
+    </mat-spinner>
+  } @else {
+      <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+      <mat-form-field>
+        <input
+          matInput
+          type="text"
+          name="title"
+          [ngModel]="post?.title"
+          required
+          minlength="3"
+          placeholder="Post Title"
+          #title="ngModel"
+        />
+        @if (title.invalid) {
+        <mat-error>Please enter a post title</mat-error>
+        }
+      </mat-form-field>
+      <mat-form-field>
+        <textarea
+          matInput
+          rows="6"
+          name="content"
+          [ngModel]="post?.content"
+          required
+          placeholder="Post Content"
+          #content="ngModel"
+        ></textarea>
+        @if (title.invalid) {
+        <mat-error>Please enter a post content</mat-error>
+        }
+      </mat-form-field>
+      <button mat-raised-button color="primary" type="submit">Save Post</button>
+    </form>
+  }
+  
 </mat-card>
