--- a/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
@@ -1,16 +1,23 @@
-@if(posts.length > 0) {
-<mat-accordion multi="true">
-  @for (post of posts; track $index) {
-  <mat-expansion-panel>
-    <mat-expansion-panel-header>
-      {{ post.title }}
-    </mat-expansion-panel-header>
-    <p>{{ post.content }}</p>
-    <a mat-button color="primary" [routerLink]="['/edit', post.id]">Edit</a>
-    <button mat-button color="warn" (click)="onDelete(post.id)">Delete</button>
-  </mat-expansion-panel>
-  }
-</mat-accordion>
+@if() {
+  <mat-spinner>
+  
+  </mat-spinner>
 } @else {
-<p class="info-text mat-body-1">No posts added yet!</p>
+  @if(posts.length > 0) {
+    <mat-accordion multi="true">
+      @for (post of posts; track $index) {
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          {{ post.title }}
+        </mat-expansion-panel-header>
+        <p>{{ post.content }}</p>
+        <a mat-button color="primary" [routerLink]="['/edit', post.id]">Edit</a>
+        <button mat-button color="warn" (click)="onDelete(post.id)">Delete</button>
+      </mat-expansion-panel>
+      }
+    </mat-accordion>
+  } @else {
+    <p class="info-text mat-body-1">No posts added yet!</p>
+  }
 }
+
