--- a/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-create/post-create.component.html
@@ -4,38 +4,40 @@
     
     </mat-spinner>
   } @else {
-      <form (submit)="onSavePost(postForm)" #postForm="ngForm">
-      <mat-form-field>
-        <input
-          matInput
-          type="text"
-          name="title"
-          [ngModel]="post?.title"
-          required
-          minlength="3"
-          placeholder="Post Title"
-          #title="ngModel"
-        />
-        @if (title.invalid) {
-        <mat-error>Please enter a post title</mat-error>
+      <form [formGroup]="form" (submit)="onSavePost()">
+        <mat-form-field>
+          <input
+            matInput
+            type="text"
+            formControlName="title"
+            placeholder="Post Title"
+          />
+          @if (form.get('title')?.invalid) {
+            <mat-error>Please enter a post title</mat-error>
+          }
+        </mat-form-field>
+        <div>
+          <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+          <input type="file" #filePicker (change)="onImagePicked($event)">
+        </div>
+        @if(imagePreview !== null && imagePreview !== '' && form.get('image')?.valid) {
+          <div class="image-preview">
+            <img [src]="imagePreview" [alt]="form.value.title">
+          </div>
         }
-      </mat-form-field>
-      <mat-form-field>
-        <textarea
-          matInput
-          rows="6"
-          name="content"
-          [ngModel]="post?.content"
-          required
-          placeholder="Post Content"
-          #content="ngModel"
-        ></textarea>
-        @if (title.invalid) {
-        <mat-error>Please enter a post content</mat-error>
-        }
-      </mat-form-field>
-      <button mat-raised-button color="primary" type="submit">Save Post</button>
-    </form>
+        <mat-form-field>
+          <textarea
+            matInput
+            rows="6"
+            formControlName="content"
+            placeholder="Post Content"
+          ></textarea>
+          @if (form.get('content')?.invalid) {
+          <mat-error>Please enter a post content</mat-error>
+          }
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Save Post</button>
+      </form>
   }
   
 </mat-card>
