--- a/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.css
+++ b/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.css
@@ -10,3 +10,12 @@
 mat-spinner {
     align-self: center;
 }
+
+mat-paginator {
+    margin-top: 1rem;
+}
+
+.post-image img{
+    width: 80%;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+}
