--- a/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/MeanStackGuide/mean-course/src/app/posts/post-list/post-list.component.html
@@ -8,12 +8,21 @@
             <mat-expansion-panel-header>
               {{ post.title }}
             </mat-expansion-panel-header>
+            <div class="post-image">
+              <img [src]="post.imagePath" [alt]="post.title">
+            </div>
             <p>{{ post.content }}</p>
             <a mat-button color="primary" [routerLink]="['/edit', post.id]">Edit</a>
             <button mat-button color="warn" (click)="onDelete(post.id)">Delete</button>
           </mat-expansion-panel>
         }
       </mat-accordion>
+      <mat-paginator 
+        [length]="totalPosts" 
+        [pageSize]="postsPerPage" 
+        [pageSizeOptions]="pageSizeOptions"
+        (page)="onChangedPage($event)"
+        ></mat-paginator>
   } @else {
     <p class="info-text mat-body-1">No posts added yet!</p>
   } 
