Adding sign in and sign up components with forms

--- a/MeanStackGuide/frontend/src/app/header/header.component.html
+++ b/MeanStackGuide/frontend/src/app/header/header.component.html
@@ -9,5 +9,11 @@
         >Add new post!</a
       >
     </li>
+    <li>
+      <a matButton href="/login" routerLinkActive="mat-accent">Login</a>
+    </li>
+    <li>
+      <a matButton href="/signup" routerLinkActive="mat-accent">Signup</a>
+    </li>
   </ul>
 </mat-toolbar>
