Showing edit and save buttons only to authenticated users

--- a/MeanStackGuide/frontend/src/app/header/header.component.html
+++ b/MeanStackGuide/frontend/src/app/header/header.component.html
@@ -4,16 +4,24 @@
   </span>
   <span class="spacer"></span>
   <ul>
-    <li>
-      <a matButton routerLink="/create" routerLinkActive="mat-accent"
-        >Add new post!</a
-      >
-    </li>
-    <li>
-      <a matButton href="/login" routerLinkActive="mat-accent">Login</a>
-    </li>
-    <li>
-      <a matButton href="/signup" routerLinkActive="mat-accent">Signup</a>
-    </li>
+    @if (userIsAuthenticated) {
+       <li>
+        <a matButton routerLink="/create" routerLinkActive="mat-accent"
+          >Add new post!
+        </a>
+      </li>
+      <li>
+        <button matButton>Logout</button>
+      </li>
+    } @else {
+      <li>
+        <a matButton href="/login" routerLinkActive="mat-accent">Login</a>
+      </li>
+      <li>
+        <a matButton href="/signup" routerLinkActive="mat-accent">Signup</a>
+      </li>
+    }
+    
+    
   </ul>
 </mat-toolbar>
