Saving the generated jwt token to browser's local storage

--- a/MeanStackGuide/frontend/src/app/header/header.component.html
+++ b/MeanStackGuide/frontend/src/app/header/header.component.html
@@ -11,7 +11,7 @@
         </a>
       </li>
       <li>
-        <button matButton>Logout</button>
+        <button matButton (click)="onLogout()">Logout</button>
       </li>
     } @else {
       <li>
