--- a/MeanStackGuide/frontend/src/app/auth/signup/signup.component.html
+++ b/MeanStackGuide/frontend/src/app/auth/signup/signup.component.html
@@ -26,7 +26,7 @@
           <mat-error>Please enter a valid password.</mat-error>
           }
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Sign Up</button>
+        <button mat-raised-button color="primary" type="submit">Sign up</button>
       </form>
   }
   
