Split application into submodules. Added lazy loading to auth.module

--- a/MeanStackGuide/frontend/src/app/header/header.component.html
+++ b/MeanStackGuide/frontend/src/app/header/header.component.html
@@ -15,10 +15,10 @@
       </li>
     } @else {
       <li>
-        <a matButton href="/login" routerLinkActive="mat-accent">Login</a>
+        <a matButton href="/auth/login" routerLinkActive="mat-accent">Login</a>
       </li>
       <li>
-        <a matButton href="/signup" routerLinkActive="mat-accent">Signup</a>
+        <a matButton href="/auth/signup" routerLinkActive="mat-accent">Signup</a>
       </li>
     }
     
